review dynamic pages

--- a/server/frontend/src/components/Dealers/Dealers.css
+++ b/server/frontend/src/components/Dealers/Dealers.css
@@ -56,7 +56,7 @@ th {
 }
 
 .reviewer {
-  margin: 10px; /* Optional margin for spacing */
+  margin: 10px;
   font-style: italic;
   color: gray;
   font-size: small;
