--- a/server/frontend/src/components/Register/Register.css
+++ b/server/frontend/src/components/Register/Register.css
@@ -1,65 +1,81 @@
-.register_container{
+.register_container {
   display: flex;
   flex-direction: column;
   margin: auto;
   margin-top: 2%;
   background-color: darkturquoise;
   min-width: 350px;
-  width: 30%;
+  width: 50%;
 }
 
-.inputs{
+.inputs {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.input{
+.input {
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
   align-items: center;
 }
 
-.input_field{
-  height:40px;
-  width:200px;
-  margin:.5cm;
+.input_field {
+  height: 40px;
+  width: 200px;
+  margin: 0.5cm;
   font-size: medium;
 }
 
-.submit_panel{
+.submit_panel {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   margin-top: 5%;
   margin-bottom: 5%;
 }
 
-.submit{
+.submit {
   margin-left: 30%;
   margin-right: 30%;
   cursor: pointer;
   font-size: large;
   color: rgb(97, 64, 128);
   border-radius: 10px;
-  height:50px;
+  height: 50px;
 }
 
 .submit:hover {
   background-color: wheat;
 }
 
-.header{
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   font: 4em sans-serif;
   color: white;
-  margin: .5cm;
+  margin: 0.5cm;
 }
 
-.img_icon{
-  width:40px;
-  margin:.1cm;
-  background-color:#0C9;
-  color:#FFF;
-  border-radius:50px;
-  text-align:center;
-  box-shadow: 2px 2px 3px #999;  
+.img_icon {
+  width: 40px;
+  margin: 0.1cm;
+  background-color: #0c9;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
+}
+
+.text {
+  flex-grow: 1;
+}
+
+.close_link {
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.close_icon {
+  width: 1cm;
 }
