--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -1,210 +1,213 @@
 :root {
-    --main-color: #00ced1;
-    --links-color: #1e90ff;
-  }
-  
-  .row {
-    display: flex;
-    flex: 1;
-    flex-direction: row;
-    margin: auto;
-    margin-top: 1%;
-    justify-content: center;
-    padding: 20px;
-  }
-  
-  .container {
-    justify-content: center;
-  }
-  .details {
-    font-size: 20px;
-    color: rgb(97, 64, 128);
-    padding: 20px;
-  }
-  
-  .title {
-    font-size: 20px;
-    background-color: rgb(97, 64, 128);
-    color: white;
-    text-align: center;
-    margin: 20px;
-    padding: 5px;
-  }
-  
-  .homepage_links {
-    color: rgb(97, 64, 128);
-    padding: 25%;
-    font-size: larger;
-  }
-  
-  .loginlink {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-  }
-  
-  .banner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex: 1;
-  }
-  
-  .form_panel {
-    padding: 2%;
-    display: flex;
-    flex-direction: column;
-    border-radius: 50px;
-    text-align: center;
-    box-shadow: 2px 2px 2px 3px #999;
-    margin: auto;
-    min-width: 350px;
-    width: 80%;
-    margin-top: 3%;
-    background-color: black;
-  }
-  
-  .navitems {
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-    flex: 1;
-    justify-content: flex-start;
-    justify-self: center;
-  }
-  
-  .nav_item {
-    margin-left: 15px;
-    font-size: 20px;
-    color: black;
-    align-self: center;
-  }
-  
-  .username {
-    font: 30px sans-serif;
-    color: black;
-    justify-content: "flex-end";
-    align-self: flex-end;
-    vertical-align: middle;
-  }
-  
-  .input_panel {
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-    flex: 1;
-    justify-content: flex-end;
-    align-items: flex-end;
-    vertical-align: middle;
-  }
-  
-  .small_header {
-    font: 30px sans-serif;
-    color: black;
-    margin: 0.5cm;
-  }
-  
-  .img_icon {
-    align-self: center;
-    width: 40px;
-    background-color: #0c9;
-    color: #fff;
-    border-radius: 50px;
-    text-align: center;
-    box-shadow: 2px 2px 3px #999;
-  }
-  
-  img {
-    width: 60%;
-    align-self: center;
-  }
-  
-  .dealerships {
-    padding-right: 5%;
-  }
-  
-  .navbar {
-    background-color: var(--main-color);
-    height: 1in;
-  }
-  
-  .nav-link {
-    font-size: larger;
-  }
-  
-  .card {
-    border: rgb(103, 102, 105) 3px solid;
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    margin: auto;
-    margin-top: 5%;
-    margin-bottom: 1%;
-  }
-  
-  .card-wrapper {
-    display: flex;
-    flex-direction: row;
-    margin: auto;
-  }
-  
-  .card-item {
-    width: 25%;
-  }
-  
-  .contact-us {
-    width: 60%;
-  }
-  
-  .card-dealership {
-    margin-top: 2%;
-    width: 90%;
-  }
-  
-  .caller {
-    width: 60%;
-    text-align: center;
-  }
-  
-  .contacts {
-    padding: 0 auto;
-    border-left: 1px solid black;
-    text-align: center;
-  }
-  
-  .contacts h6 {
-    margin: 0 auto;
-    font-weight: bolder;
-    color: var(--links-color);
-  }
-  
-  .contacts p {
-    margin: 0 auto 5px auto;
-    text-decoration: none;
-  }
-  
-  .contacts a {
-    color: var(--links-color);
-    text-decoration: none;
-  }
-  
-  .contacts span {
-    color: var(--links-color);
-  }
-  
-  .card-dealership-content {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .card-dealership {
-    border: none !important;
-  }
-  
-  .contact-us {
-    border-radius: 3% !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  }
-  
+  --main-color: #00ced1;
+  --links-color: #1e90ff;
+}
+
+.row {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  margin: auto;
+  margin-top: 1%;
+  justify-content: center;
+  padding: 20px;
+}
+
+.container {
+  justify-content: center;
+}
+.details {
+  font-size: 20px;
+  color: rgb(97, 64, 128);
+  padding: 20px;
+}
+
+.title {
+  font-size: 20px;
+  background-color: rgb(97, 64, 128);
+  color: white;
+  text-align: center;
+  margin: 20px;
+  padding: 5px;
+}
+
+.homepage_links {
+  color: rgb(97, 64, 128);
+  padding: 0 25%;
+  font-size: larger;
+  cursor: pointer;
+}
+
+.curr_user {
+  cursor: default;
+}
+
+.loginlink {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+.form_panel {
+  padding: 2%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 2px 3px #999;
+  margin: auto;
+  min-width: 350px;
+  width: 80%;
+  margin-top: 3%;
+  background-color: black;
+}
+
+.navitems {
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  flex: 1;
+  justify-content: flex-start;
+  justify-self: center;
+}
+
+.nav_item {
+  margin-left: 15px;
+  font-size: 20px;
+  color: black;
+  align-self: center;
+}
+
+.username {
+  font: 30px sans-serif;
+  color: black;
+  justify-content: "flex-end";
+  align-self: flex-end;
+  vertical-align: middle;
+}
+
+.input_panel {
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  flex: 1;
+  justify-content: flex-end;
+  align-items: flex-end;
+  vertical-align: middle;
+}
+
+.small_header {
+  font: 30px sans-serif;
+  color: black;
+  margin: 0.5cm;
+}
+
+.img_icon {
+  align-self: center;
+  width: 40px;
+  background-color: #0c9;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
+}
+
+img {
+  width: 60%;
+  align-self: center;
+}
+
+.dealerships {
+  padding-right: 5%;
+}
+
+.navbar {
+  background-color: var(--main-color);
+}
+
+.nav-link {
+  font-size: larger;
+}
+
+.card {
+  border: rgb(103, 102, 105) 3px solid;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: auto;
+  margin-top: 5%;
+  margin-bottom: 1%;
+}
+
+.card-wrapper {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+}
+
+.card-item {
+  width: 25%;
+}
+
+.contact-us {
+  width: 60%;
+}
+
+.card-dealership {
+  margin-top: 2%;
+  width: 90%;
+}
+
+.caller {
+  width: 60%;
+  text-align: center;
+}
+
+.contacts {
+  padding: 0 auto;
+  border-left: 1px solid black;
+  text-align: center;
+}
+
+.contacts h6 {
+  margin: 0 auto;
+  font-weight: bolder;
+  color: var(--links-color);
+}
+
+.contacts p {
+  margin: 0 auto 5px auto;
+  text-decoration: none;
+}
+
+.contacts a {
+  color: var(--links-color);
+  text-decoration: none;
+}
+
+.contacts span {
+  color: var(--links-color);
+}
+
+.card-dealership-content {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.card-dealership {
+  border: none !important;
+}
+
+.contact-us {
+  border-radius: 3% !important;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
