--- a/server/frontend/src/components/Dealers/Dealers.css
+++ b/server/frontend/src/components/Dealers/Dealers.css
@@ -1,65 +1,81 @@
-table{
-    margin:5px;
-    padding:10px;
-    border: grey solid 1px;
-    width:100%
-  }
-  
-  td{
-    padding:10px;
-    align-self: center;
-    border:solid grey .5px;
-    text-align: center;
-    font-size: large;
-  }
-  
-  .review_panel{
-    display: flex;
-    flex-direction: column;
-    border: solid grey;
-    position: relative;
-    height:7cm;
-    width:6cm;
-    overflow-y: scroll;
-    padding:.3cm;
-    padding-top: 0%;
-    border-radius:10px; 
-    box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.5);
-    margin-bottom: .5cm;
-    justify-content: space-between;
-  }
+table {
+  margin: 5px;
+  padding: 10px;
+  border: grey solid 1px;
+  width: 100%;
+}
 
-  .postreview{
-    margin:20px;
-    padding:10px;
-    font-size: larger;
-  }
+select[name="state"] {
+  padding: 8px 0;
+}
 
-  th{
-    padding:5px;
-    align-self: center;
-    text-align: center;
-    font-size: large;
-    margin-bottom: 1cm;
-    vertical-align: middle;
-    color: black;
-  }
+tr {
+  border: inset;
+}
 
-  .reviews_panel {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    column-gap: 1cm;
-    overflow-wrap: normal;
-    margin-top: 1cm;
-    align-items: flex-start;
-  }
+td {
+  padding: 10px;
+  align-self: center;
+  border: solid grey 0.5px;
+  text-align: center;
+  font-size: large;
+}
 
-  .reviewer {
-    margin: 10px; /* Optional margin for spacing */
-    font-style: italic;
-    color: gray;
-    font-size: small;
+.postreview_container {
+  margin: 5%;
+}
+
+.postreview_container > h2 {
+  color: darkblue;
+}
+
+.review_panel {
+  display: flex;
+  flex-direction: column;
+  border: solid grey;
+  position: relative;
+  height: 7cm;
+  width: 6cm;
+  overflow-y: scroll;
+  padding: 0.3cm;
+  padding-top: 0%;
+  border-radius: 10px;
+  box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.5);
+  margin-bottom: 0.5cm;
+  justify-content: space-between;
+}
+
+.postreview {
+  margin: 20px;
+  padding: 10px;
+  font-size: larger;
+}
+
+th {
+  padding: 5px;
+  align-self: center;
+  text-align: center;
+  font-size: large;
+  margin-bottom: 1cm;
+  vertical-align: middle;
+  color: black;
+}
+
+.reviews_panel {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: 1cm;
+  overflow-wrap: normal;
+  margin-top: 1cm;
+  align-items: flex-start;
+}
+
+.reviewer {
+  margin: 10px;
+  font-style: italic;
+  color: gray;
+  font-size: small;
 }
 
 .review {
@@ -68,18 +84,18 @@ table{
 
 .emotion_icon {
   align-self: center;
-  position:fixed;
-    width:40px;
-    height:40px;
-    background-color:#0C9;
-    color:#FFF;
-    border-radius:50px;
-    text-align:center;
-    box-shadow: 2px 2px 3px #999;  
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  background-color: #0c9;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
 }
 
 .review_icon {
-  width:40px;
+  width: 40px;
 }
 
 .review_icon:hover {
