--- a/server/frontend/src/components/Dealers/Dealers.css
+++ b/server/frontend/src/components/Dealers/Dealers.css
@@ -102,3 +102,8 @@ th {
   transform: scale(1.1);
   border: solid lightgray;
 }
+
+.dealer-name {
+  text-decoration: none;
+  color: var(--links-color);
+}
