--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -1,7 +1,12 @@
 :root {
-  --main-color: #00ced1;
+  --main-color: #02ced1;
   --links-color: #1e90ff;
+  --links-visited-color: rgb(97, 64, 128);
 }
+
+/* --main-color: #00ced1; #614080  */
+
+/* --main-color: #02ced1; */
 
 .row {
   display: flex;
@@ -18,28 +23,42 @@
 }
 .details {
   font-size: 20px;
-  color: rgb(97, 64, 128);
+  color: var(--links-visited-color);
   padding: 20px;
 }
 
 .title {
   font-size: 20px;
-  background-color: rgb(97, 64, 128);
-  color: white;
+  background-color: var(--main-color);
+  color: var(--bs-heading-color);
   text-align: center;
   margin: 20px;
   padding: 5px;
 }
 
+.homepage-card {
+  width: 50% !important;
+}
+
 .homepage_links {
-  color: rgb(97, 64, 128);
+  text-decoration: none;
+  color: var(--bs-heading-color) !important;
   padding: 0 25%;
   font-size: larger;
   cursor: pointer;
+  transition-property: transform, color;
+  transition-timing-function: ease-in-out;
+  transition-duration: 300ms;
+}
+
+.homepage_links:hover {
+  color: var(--links-visited-color) !important;
+  transform: scale(1.05);
 }
 
 .curr_user {
   cursor: default;
+  color: var(--links-visited-color) !important;
 }
 
 .loginlink {
@@ -82,7 +101,7 @@
 .nav_item {
   margin-left: 15px;
   font-size: 20px;
-  color: black;
+  color: var(--bs-heading-color);
   align-self: center;
 }
 
@@ -134,7 +153,19 @@ img {
 }
 
 .nav-link {
-  font-size: larger;
+  font-size: larger !important;
+  font-weight: bold;
+}
+
+.btn-dealership {
+  background-color: var(--main-color);
+  margin: 10px;
+}
+
+.banner > .btn-info {
+  background-color: var(--main-color);
+  color: var(--bs-heading-color);
+  margin: 10px;
 }
 
 .card {
