--- a/server/frontend/src/components/Login/Login.css
+++ b/server/frontend/src/components/Login/Login.css
@@ -1,4 +1,4 @@
-.navcontainer{
+.navcontainer {
   display: flex;
   flex: 1;
 
@@ -9,78 +9,38 @@
   align-items: flex-start;
 }
 
-.navitems{
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  flex: 1;
-  justify-content: flex-start;
-  justify-self: center;
-}
-
-.nav_item{
-  margin-left:15px;
-  font-size: 20px;
-  color: azure;
-  align-self: center;
-}
-
-.input_panel {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  flex: 1;
-  justify-content: flex-end;
-  justify-self: center;
-}
-
-.input_field{
-  height:40px;
-  width:200px; 
-  font-size: medium;
-  margin:.5cm;
-}
-
-
-.action_button{
+.action_button {
   cursor: pointer;
   font-size: large;
   color: rgb(97, 64, 128);
   border-radius: 10px;
-  height:40px;
-  padding-left:.5cm;
-  padding-right: .5cm;
-  margin: .5cm;
+  height: 40px;
+  padding-left: 0.5cm;
+  padding-right: 0.5cm;
+  margin: 0.5cm;
 }
 
 .submit:hover {
   background-color: wheat;
 }
 
-.small_header{
+.username {
   font: 30px sans-serif;
-  color:azure;
-  margin: .5cm;
-}
-
-.username{
-  font: 30px sans-serif;
-  color:azure;
-  margin: .5cm;
-  justify-content: 'flex-end';
-  align-self:flex-end;
+  color: azure;
+  margin: 0.5cm;
+  justify-content: "flex-end";
+  align-self: flex-end;
 }
 
 .login_panel {
   display: flex;
   flex-direction: column;
-  margin:auto;
+  margin: auto;
   margin: 0 auto;
-  width: 50%; 
+  width: 50%;
   padding: 20px;
   flex: 1;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
   vertical-align: middle;
-  
 }
