--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -4,10 +4,6 @@
   --links-visited-color: rgb(97, 64, 128);
 }
 
-/* --main-color: #00ced1; #614080  */
-
-/* --main-color: #02ced1; */
-
 .row {
   display: flex;
   flex: 1;
@@ -40,7 +36,7 @@
   width: 50% !important;
 }
 
-.homepage_links {
+.homepage-links {
   text-decoration: none;
   color: var(--bs-heading-color) !important;
   padding: 0 25%;
@@ -51,12 +47,12 @@
   transition-duration: 300ms;
 }
 
-.homepage_links:hover {
+.homepage-links:hover {
   color: var(--links-visited-color) !important;
   transform: scale(1.05);
 }
 
-.curr_user {
+.curr-user {
   cursor: default;
   color: var(--links-visited-color) !important;
 }
@@ -75,68 +71,11 @@
   flex: 1;
 }
 
-.form_panel {
-  padding: 2%;
-  display: flex;
-  flex-direction: column;
-  border-radius: 50px;
-  text-align: center;
-  box-shadow: 2px 2px 2px 3px #999;
-  margin: auto;
-  min-width: 350px;
-  width: 80%;
-  margin-top: 3%;
-  background-color: black;
-}
-
-.navitems {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  flex: 1;
-  justify-content: flex-start;
-  justify-self: center;
-}
-
-.nav_item {
-  margin-left: 15px;
-  font-size: 20px;
-  color: var(--bs-heading-color);
-  align-self: center;
-}
-
-.username {
-  font: 30px sans-serif;
-  color: black;
-  justify-content: "flex-end";
-  align-self: flex-end;
-  vertical-align: middle;
-}
-
-.input_panel {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  flex: 1;
-  justify-content: flex-end;
-  align-items: flex-end;
-  vertical-align: middle;
-}
-
-.small_header {
-  font: 30px sans-serif;
-  color: black;
+.input-field {
+  height: 40px;
+  width: 200px;
   margin: 0.5cm;
-}
-
-.img_icon {
-  align-self: center;
-  width: 40px;
-  background-color: #0c9;
-  color: #fff;
-  border-radius: 50px;
-  text-align: center;
-  box-shadow: 2px 2px 3px #999;
+  font-size: medium;
 }
 
 img {
