--- a/server/frontend/src/App.css
+++ b/server/frontend/src/App.css
@@ -1,11 +1,19 @@
-.register_container {
+.auth-container {
   display: flex;
   flex-direction: column;
   margin: auto;
-  margin-top: 2%;
+  margin-top: 3%;
   background-color: darkturquoise;
   min-width: 350px;
-  width: 50%;
+  max-width: 500px;
+  border-radius: 0.375rem;
+}
+
+.input-field {
+  height: 40px;
+  width: 200px;
+  margin: 0.5cm;
+  font-size: medium;
 }
 
 .inputs {
