--- a/server/frontend/src/components/Dealers/Dealers.css
+++ b/server/frontend/src/components/Dealers/Dealers.css
@@ -1,4 +1,5 @@
 table {
+  position: relative;
   margin: 5px;
   padding: 10px;
   border: grey solid 1px;
@@ -106,4 +107,17 @@ th {
 .dealer-name {
   text-decoration: none;
   color: var(--links-color);
+}
+
+.spinner {
+  position: absolute;
+  top: 50vh;
+  right: 50vw;
+  z-index: 1;
+}
+
+.spinner-border {
+  width: 4rem;
+  height: 4rem;
+  color: var(--main-color);
 }
