--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -36,7 +36,7 @@
   width: 50% !important;
 }
 
-.homepage-links {
+.auth-links {
   text-decoration: none;
   color: var(--bs-heading-color) !important;
   padding: 0 25%;
@@ -47,7 +47,7 @@
   transition-duration: 300ms;
 }
 
-.homepage-links:hover {
+.auth-links:hover {
   color: var(--links-visited-color) !important;
   transform: scale(1.05);
 }
@@ -69,13 +69,7 @@
   align-items: center;
   justify-content: center;
   flex: 1;
-}
-
-.input-field {
-  height: 40px;
-  width: 200px;
-  margin: 0.5cm;
-  font-size: medium;
+  padding: 0 40px;
 }
 
 img {
@@ -93,7 +87,6 @@ img {
 
 .nav-link {
   font-size: larger !important;
-  font-weight: bold;
 }
 
 .btn-dealership {
@@ -113,7 +106,7 @@ img {
   flex-direction: column;
   width: 80%;
   margin: auto;
-  margin-top: 5%;
+  margin-top: 3%;
   margin-bottom: 1%;
 }
 
@@ -134,6 +127,7 @@ img {
 .card-dealership {
   margin-top: 2%;
   width: 90%;
+  border: none !important;
 }
 
 .caller {
@@ -171,10 +165,6 @@ img {
   width: 100%;
   display: flex;
   flex-direction: row;
-}
-
-.card-dealership {
-  border: none !important;
 }
 
 .contact-us {
