Feat/UI changes (#7)
* ui refinement

* ui refinement

* ui refinement

* ui refinement

* ui refinement

* ui refinement

--- a/server/frontend/src/components/Dealers/Dealers.css
+++ b/server/frontend/src/components/Dealers/Dealers.css
@@ -1,4 +1,5 @@
 table {
+  position: relative;
   margin: 5px;
   padding: 10px;
   border: grey solid 1px;
@@ -21,19 +22,22 @@ td {
   font-size: large;
 }
 
-.postreview_container {
+.postreview-container {
   margin: 5%;
 }
 
-.postreview_container > h2 {
+.review-textarea {
+  text-align: center;
+}
+
+.review-textarea h2 {
   color: darkblue;
 }
 
-.review_panel {
+.review-card {
   display: flex;
   flex-direction: column;
   border: solid grey;
-  position: relative;
   height: 7cm;
   width: 6cm;
   overflow-y: scroll;
@@ -46,8 +50,9 @@ td {
 }
 
 .postreview {
-  margin: 20px;
-  padding: 10px;
+  margin-top: 1rem;
+  padding: 4px 10px;
+  border-radius: 4px;
   font-size: larger;
 }
 
@@ -61,14 +66,13 @@ th {
   color: black;
 }
 
-.reviews_panel {
+.review-panel {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   column-gap: 1cm;
   overflow-wrap: normal;
   margin-top: 1cm;
-  align-items: flex-start;
 }
 
 .reviewer {
@@ -82,9 +86,8 @@ th {
   margin-top: 1.5cm;
 }
 
-.emotion_icon {
+.emotion-icon {
   align-self: center;
-  position: fixed;
   width: 40px;
   height: 40px;
   background-color: #0c9;
@@ -94,11 +97,58 @@ th {
   box-shadow: 2px 2px 3px #999;
 }
 
-.review_icon {
+.review-icon {
   width: 40px;
 }
 
-.review_icon:hover {
+.review-icon:hover {
   transform: scale(1.1);
   border: solid lightgray;
+}
+
+.dealer-name {
+  text-decoration: none;
+  color: var(--links-color);
+}
+
+.spinner {
+  position: absolute;
+  top: 50vh;
+  right: 50vw;
+  z-index: 1;
+}
+
+.spinner-border {
+  width: 4rem;
+  height: 4rem;
+  color: var(--main-color);
+}
+
+#review {
+  width: fit-content !important;
+}
+
+.dealer-container,
+.dealer-error-container {
+  margin: 20px;
+}
+
+.dealer-error {
+  color: grey;
+}
+
+.dealer-content {
+  margin: 10px;
+}
+
+.dealer-content h1,
+.dealer-content h4 {
+  margin: 10px;
+  color: grey;
+}
+
+.dealer-content img {
+  width: 6rem;
+  margin-left: 10px;
+  margin-top: 10px;
 }
