--- a/server/frontend/src/App.css
+++ b/server/frontend/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+.auth-container {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  margin-top: 3%;
+  background-color: darkturquoise;
+  min-width: 350px;
+  max-width: 500px;
+  border-radius: 0.375rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-field {
+  height: 40px;
+  width: 200px;
+  margin: 2rem 0;
+  font-size: medium;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.inputs {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.submit-panel {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.submit {
+  margin-left: 30%;
+  margin-right: 30%;
+  cursor: pointer;
+  font-size: large;
+  color: rgb(97, 64, 128);
+  border-radius: 10px;
+  height: 50px;
+}
+
+.submit:hover {
+  background-color: wheat;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font: 4em sans-serif;
   color: white;
+  margin: 0.5cm;
 }
 
-.App-link {
-  color: #61dafb;
+.img-icon {
+  width: 40px;
+  margin: 0.1cm;
+  background-color: #0c9;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text {
+  flex-grow: 1;
+}
+
+.close-link {
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.close-icon {
+  width: 1cm;
 }
