--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -1,6 +1,7 @@
 :root {
-  --main-color: #00ced1;
+  --main-color: #02ced1;
   --links-color: #1e90ff;
+  --links-visited-color: rgb(97, 64, 128);
 }
 
 .row {
@@ -18,28 +19,38 @@
 }
 .details {
   font-size: 20px;
-  color: rgb(97, 64, 128);
+  color: var(--links-visited-color);
   padding: 20px;
 }
 
 .title {
   font-size: 20px;
-  background-color: rgb(97, 64, 128);
-  color: white;
+  background-color: var(--main-color);
+  color: var(--bs-heading-color);
   text-align: center;
   margin: 20px;
   padding: 5px;
 }
 
-.homepage_links {
-  color: rgb(97, 64, 128);
+.auth-links {
+  text-decoration: none;
+  color: var(--bs-heading-color) !important;
   padding: 0 25%;
   font-size: larger;
   cursor: pointer;
+  transition-property: transform, color;
+  transition-timing-function: ease-in-out;
+  transition-duration: 300ms;
 }
 
-.curr_user {
+.auth-links:hover {
+  color: var(--links-visited-color) !important;
+  transform: scale(1.05);
+}
+
+.curr-user {
   cursor: default;
+  color: var(--links-visited-color) !important;
 }
 
 .loginlink {
@@ -48,76 +59,19 @@
   justify-content: flex-end;
 }
 
+@media screen and (max-width: 990px) {
+  .loginlink {
+    justify-content: center;
+  }
+}
+
 .banner {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   flex: 1;
-}
-
-.form_panel {
-  padding: 2%;
-  display: flex;
-  flex-direction: column;
-  border-radius: 50px;
-  text-align: center;
-  box-shadow: 2px 2px 2px 3px #999;
-  margin: auto;
-  min-width: 350px;
-  width: 80%;
-  margin-top: 3%;
-  background-color: black;
-}
-
-.navitems {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  flex: 1;
-  justify-content: flex-start;
-  justify-self: center;
-}
-
-.nav_item {
-  margin-left: 15px;
-  font-size: 20px;
-  color: black;
-  align-self: center;
-}
-
-.username {
-  font: 30px sans-serif;
-  color: black;
-  justify-content: "flex-end";
-  align-self: flex-end;
-  vertical-align: middle;
-}
-
-.input_panel {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  flex: 1;
-  justify-content: flex-end;
-  align-items: flex-end;
-  vertical-align: middle;
-}
-
-.small_header {
-  font: 30px sans-serif;
-  color: black;
-  margin: 0.5cm;
-}
-
-.img_icon {
-  align-self: center;
-  width: 40px;
-  background-color: #0c9;
-  color: #fff;
-  border-radius: 50px;
-  text-align: center;
-  box-shadow: 2px 2px 3px #999;
+  padding: 0 40px;
 }
 
 img {
@@ -134,7 +88,18 @@ img {
 }
 
 .nav-link {
-  font-size: larger;
+  font-size: larger !important;
+}
+
+.btn-dealership {
+  background-color: var(--main-color);
+  margin: 10px;
+}
+
+.banner > .btn-info {
+  background-color: var(--main-color);
+  color: var(--bs-heading-color);
+  margin: 10px;
 }
 
 .card {
@@ -143,27 +108,35 @@ img {
   flex-direction: column;
   width: 80%;
   margin: auto;
-  margin-top: 5%;
+  margin-top: 3%;
   margin-bottom: 1%;
 }
 
-.card-wrapper {
+.about,
+.homepage-card,
+.contact-us {
+  margin: 3% auto 1% !important;
+  width: 60% !important;
+  border: none !important;
+  border-radius: 5px !important;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2) !important;
+}
+
+.card-row {
   display: flex;
   flex-direction: row;
-  margin: auto;
+  flex-wrap: wrap;
+  margin: 10px;
 }
 
 .card-item {
-  width: 25%;
-}
-
-.contact-us {
-  width: 60%;
+  height: 95% !important;
 }
 
 .card-dealership {
   margin-top: 2%;
   width: 90%;
+  border: none !important;
 }
 
 .caller {
@@ -201,13 +174,4 @@ img {
   width: 100%;
   display: flex;
   flex-direction: row;
-}
-
-.card-dealership {
-  border: none !important;
-}
-
-.contact-us {
-  border-radius: 3% !important;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
